--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swagger-ui-wrapper",
-  "version": "1.0.0",
+  "name": "@boxed/swagger-ui-wrapper",
+  "version": "1.0.12",
   "description": "",
   "main": "dist/index.js",
   "dependencies": {
@@ -14,7 +14,8 @@
     "typescript": "4.5.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pub": "tsc && npm --no-git-tag-version version patch && npm publish"
   },
   "author": "",
   "license": "ISC"
